--- a/security.html
+++ b/security.html
@@ -39,6 +39,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/MindPointGroupLLC/743999698281929-security-engineer'>MindPoint Group, LLC Security Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Washington, DC</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/MindPointGroupLLC/743999698280399-cloud-security-engineer'>MindPoint Group, LLC Cloud Security Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Alexandria, VA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oW4MafwG&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nMNboMwp'>Imperva Careers - Cloud Security Engineer, Managed Services</a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore  Singapore</span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -63,7 +71,7 @@
 <p><span class="badge badge-light">Springfield, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/prominentedge/915082e2-55a4-4719-9c5c-735da8fc4d15'>Prominent Edge LLC - Lead Security Solutions Engineer  (TS/SCI Required)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/prominentedge/915082e2-55a4-4719-9c5c-735da8fc4d15'>Prominent Edge LLC - Lead Security Solutions Engineer  (TS/SCI Required)</a></h5> 
 <p><span class="badge badge-light">Springfield, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -177,7 +185,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Mumbai Mumbai</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oT5L9fwC&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nzAVmMwH'>WP Engine Careers - Senior Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oT5L9fwC&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nzAVmMwH'>WP Engine Careers - Senior Security Engineer</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -323,7 +331,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">M?nchen</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698235210-sr-security-analyst'>CompuGain Solutions Sr Security Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698235210-sr-security-analyst'>CompuGain Solutions Sr Security Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -359,7 +367,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.hirebridge.com/v3/CareerCenter/v2/details.aspx?cid=7883&jid=509257&locvalue=1016'>Security Operations Engineer I #509257 APAC-JPN-Tokyo</a></h5> 
+<h5><a href='https://recruit.hirebridge.com/v3/CareerCenter/v2/details.aspx?cid=7883&jid=509257&locvalue=1016'>Security Operations Engineer I #509257 APAC-JPN-Tokyo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 12, 2019 ... Provides the framework, processes and execution to ensure support of Jamfs 
 data leakage prevention; Responsible for Web application firewall and related?...</p>
@@ -410,7 +418,7 @@ data leakage prevention; Responsible for Web application firewall and related?..
 <p><span class="badge badge-light">New York City Boston</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oKfQ9fwI&__jvst=Employee&__jvsd=sep77gwC&__jvsc=Twitter&bid=nkmblMwt'>Schneider Electric NAM Careers - Senior Endpoint Security Support Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oKfQ9fwI&__jvst=Employee&__jvsd=sep77gwC&__jvsc=Twitter&bid=nkmblMwt'>Schneider Electric NAM Careers - Senior Endpoint Security Support Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -438,21 +446,13 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light">Montreal, QCCanada  Canada</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698043013-security-engineer-cloud-infrastructure'>4Catalyzer Security Engineer - Cloud Infrastructure | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698043013-security-engineer-cloud-infrastructure'>4Catalyzer Security Engineer - Cloud Infrastructure | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orL0afw6&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nOudkMw6'>Tenable Careers - Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orL0afw6&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nOudkMw6'>Tenable Careers - Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Mitie/743999698124458-security-intelligence-analyst-sub-saharan-africa-'>Mitie Security & Intelligence Analyst (Sub-Saharan Africa) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Canada London</span></p>
-<p>Posted on: 2019-10-25</p>
-<hr/>
-<h5><a href='https://geico.referrals.selectminds.com/jobs/security-data-analyst-10744'>Security Data Analyst - GEICO Careers</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-24</p>
 <hr/>
 
 
